Update personal information

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Xiangyang Zhai / 翟向阳"
-  pronouns         : "he/him" # example: "she/her"  
+  pronouns         : # example: "she/her"  
   bio              : "PhD student, Chinese Academy of Sciences. Focused on climate finance and climate risk management." # Short biography for the left-hand sidebar
   location         : "Beijing, China"
   employer         : "University of Chinese Academy of Sciences"
@@ -41,8 +41,8 @@ author:
   orcid            : "https://orcid.org/0009-0002-8699-4087"
   semantic         : # URL
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
-  scopus           : # URL
+  researchgate     : "https://www.researchgate.net/profile/Xiangyang-Zhai-3" # URL
+  scopus           : "https://www.scopus.com/authid/detail.uri?authorId=59012215000" # URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
