Update personal information

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "PhD student, Chinese Academy of Sciences. Focused on climate finance and climate risk management." # Short biography for the left-hand sidebar
   location         : "Beijing, China"
-  employer         : "University of Chinese Academy of Sciences"
+  employer         : "Chinese Academy of Sciences"
   uri              : # URL
   email            : "zhaixiangyang24@mails.ucas.ac.cn" 
 
